sumo/tests/sumo/extended/emitter/errors/vtypedist/missing_prob/errors.sumo
Error: MSTriggeredSource emitter: Attribute 'probability' for vehicle type 'KRAUSS_DEFAULT2' is not given.
Quitting (on error).
